# GirlsBandShot

./: .dockerignore  .gitignore  DEPLOY-DOCKER.md  Dockerfile  README.md  docker-compose.yml  install.sh  setup-nginx.sh  setup.sh  update.sh
extractor/: .dockerignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  yt-to-mp4.csv
extractor/src/extractor/: cli.py  models.py  ocr.py  pipeline.py  storage.py  video.py
web/: .env.local.example  package-lock.json  package.json
web/data/ave-mujica/: subtitles.db
web/src/app/: layout.tsx  page.tsx
web/src/app/api/gif/[series]/[id]/: route.ts
web/src/app/api/image/[series]/[id]/: route.ts
web/src/app/api/search/: route.ts
web/src/app/api/series/: route.ts
web/src/app/api/v1/gif/[series]/[id]/: route.ts
web/src/app/api/v1/image/[series]/[id]/: route.ts
web/src/app/api/v1/search/: route.ts
web/src/app/api/v1/series/: route.ts
web/src/app/docs/: page.tsx
web/src/app/search/: page.tsx
web/src/components/: site-footer.tsx  site-nav.tsx  subtitle-card.tsx  subtitle-dialog.tsx
web/src/lib/: api-key.ts  cache.ts  db.ts  ffmpeg.ts  media.ts  rate-limit.ts  search.ts
